RESOLVED FIXED 263191
REGRESSION(269353@main): Introduced new crashes in the GStreamer WebRTC backend
https://bugs.webkit.org/show_bug.cgi?id=263191
Summary REGRESSION(269353@main): Introduced new crashes in the GStreamer WebRTC backend
Philippe Normand
Reported 2023-10-16 03:00:21 PDT
.
Attachments
Philippe Normand
Comment 1 2023-10-16 03:02:17 PDT
EWS
Comment 2 2023-10-17 02:42:02 PDT
Committed 269404@main (72bca1fdbc7a): <https://commits.webkit.org/269404@main> Reviewed commits have been landed. Closing PR #19109 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-10-17 02:43:14 PDT
Note You need to log in before you can comment on or make changes to this bug.