REGRESSION(269353@main): Introduced new crashes in the GStreamer WebRTC backend https://bugs.webkit.org/show_bug.cgi?id=263191

Reviewed by Xabier Rodriguez-Calvar.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerStatsCollector.cpp:
(WebCore::fillRTCTransportStats): Fill the dtlsState field, which is required, per-spec.

Canonical link: https://commits.webkit.org/269404@main